disable hover effect

--- a/app/views/tracks/index.html+mobile.haml
+++ b/app/views/tracks/index.html+mobile.haml
@@ -2,7 +2,7 @@
   = render 'filters'
 
   .tracks-index__table-container
-    #tracks-table.table.table-hover
+    #tracks-table.table
       .thead
         = render 'table_header'
       .tbody
