--- a/app/assets/stylesheets/mobile/pages/tracks/_track_charts.scss
+++ b/app/assets/stylesheets/mobile/pages/tracks/_track_charts.scss
@@ -14,6 +14,7 @@
     -webkit-appearance: none;
     border-radius: 0;
     border-color: transparent;
+    background-color: transparent;
     text-transform: uppercase;
   }
 }
