justify tracks filters modal footer

--- a/app/assets/stylesheets/mobile/pages/tracks/_tracks_filters.scss
+++ b/app/assets/stylesheets/mobile/pages/tracks/_tracks_filters.scss
@@ -2,3 +2,11 @@
   margin-top: 15px;
   margin-bottom: 10px;
 }
+
+.tracks-filters__modal-footer {
+  text-align: justify;
+
+  .btn {
+    width: 48%;
+  }
+}
