--- a/app/views/layouts/_header.html+mobile.haml
+++ b/app/views/layouts/_header.html+mobile.haml
@@ -8,17 +8,15 @@
         %span.icon-bar
       = link_to t('application.header.home'), root_path, class: 'navbar-brand'
 
-    .navbar-collapse.collapse#skyderby-navbar-collapse
+    .navbar-collapse.collapse
       %ul.nav.navbar-nav
         - root_controller = controller.controller_path.split('/').first
-        %li{class: ('nav-active' if root_controller == 'tracks')}
+        %li.navbar__link{class: ('navbar__link--active' if root_controller == 'tracks')}
           = link_to t('application.header.tracks'), tracks_path
-        %li{class: ('nav-active' if ['events', 'tournaments'].include? root_controller)}
+        %li.navbar__link{class: ('navbar__link--active' if ['events', 'tournaments'].include? root_controller)}
           = link_to t('application.header.competitions'), events_path
-        %li{class: ('nav-active' if root_controller == 'virtual_competitions')}
+        %li.navbar__link{class: ('navbar__link--active' if root_controller == 'virtual_competitions')}
           = link_to t('application.header.online_competitions'), virtual_competitions_path 
-        %li{class: ('nav-active' if root_controller == 'places')}
-          = link_to t('application.header.places'), places_path
            
       %ul.nav.navbar-nav.navbar-right
 
