online competition show - wip

--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -6,6 +6,7 @@
  *= require select2-bootstrap
 */
 
+@import '../variables';
 @import '../ajax_error_message';
 @import '../flags';
 @import '../tables';
