improved online competition layout

--- a/app/assets/stylesheets/mobile/pages/_online_competition.scss
+++ b/app/assets/stylesheets/mobile/pages/_online_competition.scss
@@ -27,6 +27,11 @@
   color: rgba($table-text-color, 0.8);
 }
 
+.online-competition__profile {
+  font-size: 16px;
+  font-weight: bold;
+}
+
 .online-competition__suit-place {
   font-size: 10px;
 }
