improved online competition layout

--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -5,6 +5,7 @@
  *= require select2-bootstrap
 */
 
+@import 'bootstrap_variables_overrides';
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
