--- a/app/views/charts/speeds_chart_options.js+mobile.erb
+++ b/app/views/charts/speeds_chart_options.js+mobile.erb
@@ -2,7 +2,8 @@
 {
   chart: {
     type: 'spline',
-    marginLeft: 70,
+    marginLeft: 0,
+    marginRight: 0,
     events: {
       load: function() {
         Skyderby.helpers.chart_load_callback('speeds_chart_', this.series);
@@ -10,6 +11,7 @@
     }
   },
   title: {
+    style: { 'color': "#666", "fontSize": "14px" },
     text: '<%= t('charts.spd.title') %>'
   },
   plotOptions: {
@@ -32,6 +34,8 @@
   yAxis: [{ //Speed yAxis
     min: 0,
     labels: {
+      x: 25,
+      y: -2,
       style: {
         color: Highcharts.getOptions().colors[1]
       }
@@ -50,6 +54,11 @@
   },
   credits: {
     enabled: false
+  },
+  legend: {
+    itemStyle: {
+      fontSize: '10px'
+    }
   },
   series: [{
     name: I18n.t('charts.spd.series.ground'),
