fixed errors on showing competition track details

--- a/app/views/events/event_tracks/_show_modal.html.haml
+++ b/app/views/events/event_tracks/_show_modal.html.haml
@@ -19,7 +19,7 @@
             .pull-right
               = render 'tracks/view_settings_menu'
         -# Header
-        = render partial: 'tracks/indicators', locals: {presenter: @track_data}
+        = render partial: 'tracks/indicators', locals: {presenter: @track_presenter}
 
         %hr
         .row
