using new chart settings object

--- a/app/views/tracks/_charts.html+mobile.haml
+++ b/app/views/tracks/_charts.html+mobile.haml
@@ -1,5 +1,5 @@
 .track-charts__charts-container
-  - if preferred_charts_mode == 'separate'
+  - if presenter.separate_charts?
     #glideratio_chart.track-charts__chart
     #speeds_chart.track-charts__chart
     #elevation_distance_chart.track-charts__chart
