--- a/app/views/tracks/_charts.html.haml
+++ b/app/views/tracks/_charts.html.haml
@@ -1,5 +1,5 @@
 .track-charts__charts-container
-  - if preferred_charts_mode == 'separate'
+  - if presenter.separate_charts?
     #glideratio_chart
     #speeds_chart
     #elevation_distance_chart
