--- a/app/views/tracks/_show_track.html.haml
+++ b/app/views/tracks/_show_track.html.haml
@@ -6,7 +6,7 @@
     .content-block
       .card-action
         .dropdown.position-right.settings-button
-          = render 'tracks/view_settings_menu'
+          = render 'tracks/view_settings_menu', presenter: @track_presenter
 
       = render partial: 'indicators', locals: {presenter: @track_presenter}
 
@@ -24,7 +24,7 @@
                                   data: {remote: 'true', url: url_for},
                                   value: "#{@track_presenter.range_from};#{@track_presenter.range_to}"}
 
-      = render 'tracks/charts'
+      = render 'tracks/charts', presenter: @track_presenter
     
     %blockquote
       - if @track.comment.present?
