--- a/app/views/events/event_tracks/_show_modal.html.haml
+++ b/app/views/events/event_tracks/_show_modal.html.haml
@@ -17,14 +17,14 @@
         .row
           .col-sm-12
             .pull-right
-              = render 'tracks/view_settings_menu'
+              = render 'tracks/view_settings_menu', presenter: @track_presenter
         -# Header
         = render partial: 'tracks/indicators', locals: {presenter: @track_presenter}
 
         %hr
         .row
           .col-sm-12
-            = render 'tracks/charts'
+            = render 'tracks/charts', presenter: @track_presenter
 
         .row
           %hr
