--- a/app/views/events/event_tracks/show.js.erb
+++ b/app/views/events/event_tracks/show.js.erb
@@ -1,11 +1,7 @@
 $('#modal').html('<%= j render('show_modal') %>');
 
-<% units = preferred_charts_units %>
-<% speed_units = speed_units_by_type(units) %>
-<% distance_units = distance_units_by_type(units) %>
-
-<% if preferred_charts_mode == 'separate' %>
-  <%= render partial: 'tracks/separate_charts', locals: {presenter: @track_presenter} %>
+<% if @track_presenter.separate_charts? %>
+  <%= render partial: 'tracks/separate_charts', locals: { presenter: @track_presenter } %>
 
   $('#modal').one('shown.bs.modal', function() {
     $('#glideratio_chart').highcharts().reflow();
@@ -13,7 +9,7 @@ $('#modal').html('<%= j render('show_modal') %>');
     $('#elevation_distance_chart').highcharts().reflow();
   });
 <% else %>
-  <%= render partial: 'tracks/single_chart', locals: {presenter: @track_presenter} %>
+  <%= render partial: 'tracks/single_chart', locals: { presenter: @track_presenter } %>
 
   $('#modal').one('shown.bs.modal', function() {
     $('#all_data_chart').highcharts().reflow();
