round map placeholder

--- a/app/views/events/show.js.erb
+++ b/app/views/events/show.js.erb
@@ -1,2 +1,4 @@
 $('#modal').modal('hide');
 $('#event').replaceWith('<%= j render template: 'events/show', formats: [:html] %>');
+
+<%= render 'show_controls' %>
