--- a/app/assets/stylesheets/events/rounds/_map.scss
+++ b/app/assets/stylesheets/events/rounds/_map.scss
@@ -42,3 +42,33 @@
   }
 
 }
+
+@keyframes placeHolderShimmer{
+  0%{
+    background-position: -820px 0
+  }
+  100%{
+    background-position: 820px 0
+  }
+}
+
+.round-map__animated-background {
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: placeHolderShimmer;
+  animation-timing-function: linear;
+  background: linear-gradient(to right, #fff 8%, #dddddd 18%, #fff 33%);
+  background-size: 800px 400px;
+  height: 400px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+}
+
+.round-map__animation {
+  position: relative;
+  min-height: 400px;
+}
