--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -158,3 +158,7 @@
       = link_to new_event_sponsor_path(event_id: @event.id), remote: true, class: 'add-sponsor' do
         %i.fa.fa-plus
         = t('.add_sponsor')
+
+- content_for :page_js do
+  %script
+    = render partial: 'show_controls', formats: [:js]
