fixed color of navbar border

--- a/app/assets/stylesheets/_bootstrap_variables_overrides.scss
+++ b/app/assets/stylesheets/_bootstrap_variables_overrides.scss
@@ -1,6 +1,6 @@
 $navbar-default-bg:         rgba(255,255,255, 0.95);
-$navbar-default-border:     fade(#000, 14%);
-$page-header-border-color:  fade(#000, 14%);
+$navbar-default-border:     rgba(0, 0, 0, 0.14);
+$page-header-border-color:  rgba(0, 0, 0, 0.14);
 
 $border-radius-base:        2px;
 $border-radius-large:       3px;
