small ux improvements

--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -7,7 +7,7 @@
             = t('.title')
             %small= t('.subtitle')
           %p= t('static_pages.index.desc')
-          %a.btn.btn-success.btn-lg{href: '#', data: {toggle: 'modal', target: '#newTrackModal'}}
+          %a.btn.btn-lg.button--green.button--jelly{href: '#', data: {toggle: 'modal', target: '#newTrackModal'}}
             %i.fa.fa-upload
             = t('application.header.upload_track')
         .col-3.hidden-xs.col-sm-3
