--- a/app/views/sponsors/sponsors_copies/new.js.erb
+++ b/app/views/sponsors/sponsors_copies/new.js.erb
@@ -3,7 +3,7 @@ $('#modal').modal('show');
 
 Skyderby.helpers.EventSelect(
   $('select[name="sponsor_copy[source_event_id]"]'),
-  { placeholder: "<%= I18n.t('sponsors_copy.form_modal.source_event_placeholder') %>" }
+  { placeholder: "<%= I18n.t('sponsors.sponsors_copies.form_modal.source_event_placeholder') %>" }
 );
 
 $("sponsor-copy__form").validate({
